--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  badges: 2.0.2
+  google_fonts: ^5.0.0
+  auto_size_text: 3.0.0
+  flutter_bloc: ^7.0.0
+  equatable: ^2.0.0
+  easy_debounce: 2.0.1
+  animations: ^2.0.3
 
 dev_dependencies:
   flutter_test:
