--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   badges: 2.0.2
-  google_fonts: ^5.0.0
+  google_fonts: ^4.0.4
   auto_size_text: 3.0.0
   flutter_bloc: ^7.0.0
   equatable: ^2.0.0
   easy_debounce: 2.0.1
   animations: ^2.0.3
+  carousel_slider: ^4.0.0
+  bloc_test: ^8.0.0
+  mockito: ^5.0.0
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
